experimentations diamond dependency hell
  Top level app > ATSLib > log4net v3 with publicKeyToken 1
                > log4net v1 with publicKeyToken 2

--- a/ATSLib/ATSLib.csproj
+++ b/ATSLib/ATSLib.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <IncludePackageReferencesDuringPacking>false</IncludePackageReferencesDuringPacking>
+    <IsPackable>true</IsPackable>
+    
     <PackageId>ATSLib</PackageId>
     <Version>1.0.0</Version>
     <Authors>YourName</Authors>
