--- a/TestMultiLog4net/TestMultiLog4net.csproj
+++ b/TestMultiLog4net/TestMultiLog4net.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ATSLib" Version="1.1.0" />
       <PackageReference Include="log4net" Version="1.2.13" />
     </ItemGroup>
 
