--- a/ATSLib/ATSLib.csproj
+++ b/ATSLib/ATSLib.csproj
@@ -1,21 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <IncludePackageReferencesDuringPacking>false</IncludePackageReferencesDuringPacking>
     <IsPackable>true</IsPackable>
-    
     <PackageId>ATSLib</PackageId>
     <Version>1.0.0</Version>
     <Authors>YourName</Authors>
     <Description>ATSLib library with log4net dependency.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="log4net" Version="3.2.0" />
+    <PackageReference Include="log4net" />
   </ItemGroup>
-
 </Project>
